# agent-workflow

./: .coverage  .gitignore  .semgrep.yml  AGENTS.md  README.md  alembic.ini  pyproject.toml
.github/: AGENTS.md  PULL_REQUEST_TEMPLATE.md  copilot-instructions.md
.github/ISSUE_TEMPLATE/: bug-report.yml  feature-request.yml
.github/PRs/: delete-repo-specific-specs.md
.github/agent-platform/: context-packet.schema.json  repo-map.json  run-artifact-schema.json  skill-registry.json  workflow-benchmarks.json  workflow-manifest.json
.github/agents/: analyst.agent.md  cleanup.agent.md  implementer.agent.md  orchestrator.agent.md  planner.agent.md  qa.agent.md  researcher.agent.md  reviewer.agent.md
.github/hooks/: audit_trigger.py  failure_index.py  gate_registry.py  phase_engine.py  playwright_invoke.py  playwright_probe.js  posttool_validator.py  session_io_support.py  (+7 more)
agent-core/: README.md
alembic/: env.py
docs/: AGENTS.md  architecture.md  ci-cd.md  cli-reference.md  copilot-setup.md  deployment.md  hyperintelligence_plan.md  implementation-wave-1-top5.md  monitors-as-code.md  pipeline-studio.md  product-direction.md  quickstart.md  roadmap.md  sdk-reference.md
evals/: README.md  run_evals.py  task.schema.json
frontend/: .coverage  AGENTS.md  eslint.config.js  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
scripts/: add_pipeline_columns.py  build_images.sh  check_file_size.sh  debug_create.py  generate.sh  local_dev.sh  migrate_templates.py  run_demo_pipeline.py  run_showcase.py  start_local.sh
src/: AGENTS.md
tests/: AGENTS.md
(+259 files in other folders)
