[project]
name = "agent-workflow"
version = "0.1.0"
description = "Reusable scaffold for agent-driven software delivery"
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.0,<3.0",
    "fastapi>=0.115",
    "sqlalchemy>=2.0,<3.0",
    "alembic>=1.13,<2.0",
    "temporalio>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=6.0",
    "ruff>=0.11",
    "httpx>=0.27",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/agent_runtime"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.coverage.run]
source = ["agent_runtime"]
omit = ["*/temporal_worker.py"]

[tool.coverage.report]
fail_under = 80
show_missing = true

[tool.ruff]
target-version = "py312"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "SIM", "RUF"]
